# provenance-analyser

./: README.md  pyproject.toml
examples/: basic_usage.md
src/provenance_analyser/: __init__.py  analyser.py  api.py  cli.py  exceptions.py  manifest.py  schemas.py
src/provenance_analyser/extractors/: __init__.py  docx.py  pdf.py  pptx.py  xlsx.py
tests/: conftest.py  test_analyser.py  test_api.py  test_cli.py  test_public_api.py
