[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "provenance-analyser"
version = "0.1.0"
description = "Document provenance/metadata analysis — creator app, editing time, author chain, AI-gen markers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Michael Borck", email = "michael.borck@curtin.edu.au" }]
keywords = ["provenance", "metadata", "authorship", "ai-detection", "office", "pdf", "lens"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "lens-contract>=0.2.0",
    "python-docx>=1.1.0",
    "python-pptx>=0.6.21",
    "openpyxl>=3.1.0",
    "pypdf>=4.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.27.0",
    "reportlab>=4.0.0",  # used in tests to build .pdf fixtures with metadata
]

[tool.uv.sources]
lens-contract = { path = "../lens-contract", editable = true }

[project.scripts]
provenance-analyser = "provenance_analyser.cli:main"

[project.urls]
Homepage = "https://github.com/michael-borck/provenance-analyser"
Repository = "https://github.com/michael-borck/provenance-analyser"
Issues = "https://github.com/michael-borck/provenance-analyser/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/provenance_analyser"]

[tool.pytest.ini_options]
testpaths = ["tests"]
